# hack-mit-2025

./: .gitignore  AGENT_CAPABILITIES_SUMMARY.md  END_TO_END_VERIFICATION_GUIDE.md  ERCOT_SETUP_README.md  HACKATHON_SUBMISSION.md  LIVE_MONITOR_SUMMARY.md  README.md  SYSTEM_SUMMARY.md  UAGENTS_INTEGRATION_README.md  UAGENTS_WORKING_INTEGRATION.md  aura_langchain_uagents.py  aura_uagents_bureau.py  aura_uagents_simple.py  demo_aura_uagents.py  live_weather_grid_monitor.py  make_call.py  process.py  simple_phone_test.py  test_aura.py  test_aura_pipeline.py  test_backup_call.py  test_both_calls.py  test_complete_agentverse_functionality.py  test_direct_call.py  test_dynamic_actions.py  test_dynamic_agent.py  test_end_to_end_flow.py  test_external_data_integration.py  test_full_integration.py  test_llm_intelligent_actions.py  test_minimum_actions.py  test_phone_integration.py  test_real_agent_minimum.py  test_real_call.py  test_real_call_integration.py  test_real_calls.py  test_simple_integration.py  test_voice_direct.py  test_webhook.py  verify_agentverse_implementation.py
agentverse-aura/: DEPLOYMENT.md  README.md  env.example  main.py  pyproject.toml  requirements.txt  run_agent.py
agentverse-aura/config/: agent_config.yaml  agentverse_config.yaml
agentverse-aura/src/aura_agent/: __init__.py  aura_agent.py  smart_home_simulator.py  voice_service.py
agentverse-aura/tests/: __init__.py  test_aura_agent.py
data/: mock_grid_data.json  mock_grid_normal.json  mock_grid_outage.json  mock_weather_data.json  mock_weather_extreme.json  mock_weather_mild.json  profit_max.json  (+4 more)
(+42 files in other folders)
